--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".RegisterActivity">
+    tools:context=".loginActivity">
 
     <TextView
         android:id="@+id/registrotitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registro"
+        android:text="Iniciar Sesion"
         android:textAlignment="center"
         android:textColor="@color/colorBlack"
         android:textSize="25sp" />
@@ -41,34 +41,34 @@
         android:id="@+id/passwordTIL"
         android:layout_below="@+id/emailTIL"
         app:passwordToggleEnabled="true">
+
         <EditText
             android:id="@+id/passwordEt"
             android:inputType="textPassword"
             android:hint="Password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/registerBtn"
-        android:text="Registrar"
+        android:id="@+id/loginlogBtn"
+        android:text="Ingresar"
         android:layout_below="@+id/passwordTIL"
         android:layout_centerHorizontal="true"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
-    <TextView
-        android:id="@+id/tcuenta_rgTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ya tienes una cuenta?"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        android:layout_below="@id/registerBtn"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/colorPrimary"
+        android:drawablePadding="5dp"
         />
 
+    <TextView
+        android:id="@+id/ntcuenta_rgTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No tienes una cuenta?"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:layout_below="@id/loginlogBtn"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/colorBlack" />
 </RelativeLayout>
