--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#9b1ac9</color>
     <color name="colorPrimaryDark">#710d95</color>
-    <color name="colorAccent">#9b1ac9</color>
+    <color name="colorAccent">#9B1AC9</color>
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#fff</color>
 </resources>
