--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,13 +62,23 @@
         />
 
     <TextView
+        android:id="@+id/rpasswLog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Olvidaste tu contraseña? "
+        android:layout_below="@id/loginlogBtn"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        />
+    <TextView
         android:id="@+id/ntcuenta_rgTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="No tienes una cuenta?"
         android:textAlignment="center"
-        android:textSize="20dp"
-        android:layout_below="@id/loginlogBtn"
+        android:textSize="15dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="30dp"
-        android:textColor="@color/colorBlack" />
+        android:textColor="@color/colorBlack"
+        android:layout_marginBottom="5dp"/>
 </RelativeLayout>
