--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,13 +23,13 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:id="@+id/emailTIL">
+
         <EditText
             android:id="@+id/emailEt"
-            android:inputType="textEmailAddress"
-            android:hint="Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--edit text PASSWORD -->
@@ -52,24 +52,37 @@
 
     <Button
         android:id="@+id/loginlogBtn"
-        android:text="Ingresar"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:layout_width="374dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/passwordTIL"
         android:layout_centerHorizontal="true"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:drawablePadding="5dp"
-        />
+        android:text="Ingresar" />
 
+    <!--Recuperar password-->
     <TextView
         android:id="@+id/rpasswLog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Olvidaste tu contraseña? "
-        android:layout_below="@id/loginlogBtn"
+        android:layout_below="@id/googleloginBtn"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
+        android:layout_marginTop="0dp"
         />
+    <!--Google sign in -->
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleloginBtn"
+        android:layout_width="372dp"
+        android:layout_height="44dp"
+        android:layout_below="@+id/loginlogBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp" />
+
+
+
     <TextView
         android:id="@+id/ntcuenta_rgTV"
         android:layout_width="match_parent"
@@ -80,5 +93,5 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="30dp"
         android:textColor="@color/colorBlack"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="0dp"/>
 </RelativeLayout>
